# custom_logger

./: .gitignore  README.md  pyproject.toml  setup.py  test_logger.py
custom_logger/: __init__.py  logger.py
